<resources>
    <string name="app_name">BDD</string>
    <string name="submit">Envoyer</string>
    <string name="password">Mot de passe</string>
    <string name="login">Login</string>
    <string name="name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="birth_date">Date de naissance (JJ/MM/AAAA)</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="email">Adresse mail</string>
    <string name="domains">Centres d\'intérêt :</string>
    <string name="sport">Sport</string>
    <string name="music">Musique</string>
    <string name="reading">Lecture</string>
    <string name="inscription">Inscription</string>
    <string name="clear">Effacer les champs</string>
    <string name="synthesis">Synthèse des données</string>
    <string name="display_db">Afficher la db</string>
    <string name="db_content_title">Contenu de la base de données</string>
    <string name="emptydb">Vider la base de données</string>
    <string name="connexion">Connexion</string>
    <string name="new_user">Nouvelle Inscription</string>
    <string name="welcome">Bienvenue !</string>
    <string name="planning">Planning du jour</string>
    <string name="creneau1">08h-10h :</string>
    <string name="creneau2">10h-12h :</string>
    <string name="creneau3">14h-16h :</string>
    <string name="creneau4">16h-18h :</string>
    <string name="submit_and_save">Valider et Sauvegarder</string>
    <string name="planning_synthesis">Synthèse du planning</string>
    <string name="no_planning">Aucun planning pour cette date.\nAppuyez sur le + pour en créer un.</string>
    <string name="planning_delete">Supprimer ce planning</string>
    <string name="back">Retour</string>
</resources>