<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="login"
                android:hint="@string/login"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/et_login" />

            <EditText
                android:id="@+id/et_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/name"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <EditText
                android:id="@+id/et_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="firstname"
                android:hint="@string/first_name"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/et_nom" />

            <EditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="birthdate"
                android:hint="@string/birth_date"
                android:inputType="date"
                app:layout_constraintTop_toBottomOf="@id/et_prenom" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:hint="@string/phone"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@id/et_dob" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/et_phone" />

            <TextView
                android:id="@+id/interests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domains"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/cb_sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport"
                app:layout_constraintTop_toBottomOf="@id/interests"
                app:layout_constraintStart_toStartOf="parent" />
            <CheckBox
                android:id="@+id/cb_musique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                app:layout_constraintTop_toBottomOf="@id/cb_sport"
                app:layout_constraintStart_toStartOf="parent" />
            <CheckBox
                android:id="@+id/cb_lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading"
                app:layout_constraintTop_toBottomOf="@id/cb_musique"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/submit"
                app:layout_constraintTop_toBottomOf="@id/cb_lecture" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                app:layout_constraintTop_toBottomOf="@id/btn_submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_db_display"
                app:layout_constraintWidth_percent="0.4" />

            <Button
                android:id="@+id/btn_db_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/display_db"
                app:layout_constraintTop_toBottomOf="@id/btn_submit"
                app:layout_constraintStart_toEndOf="@id/btn_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>